# bt-diff

./: .cspell.json  .gitignore  Cargo.toml  README.md  cli.rs  quicktest.sh
.cspell/: rust.txt
bt-diff/: core.rs  errors.rs  lib.rs
tests/: test_function_diff.rs  test_render.rs  test_serde.rs  test_struct_diff.rs
